feat: v1.1 complete reimplementation with auto-discovery and enhanced UX
Major architectural improvements for seamless user experience:

## Core Changes

### Auto-Discovery & Configuration
- Automatic detection of J1 devices when paired with ZHA
- Zero-configuration setup with guided shade type selection
- Manual device selection fallback for edge cases
- Options flow to change shade type post-setup

### Integration Components
- **__init__.py**: ZHA_DEVICE_ADDED listener, auto-trigger config flow, entity hiding
- **config_flow.py**: Discovery flow, user step, manual step, options flow
- **cover.py**: Wrapper entity with feature filtering and state sync
- **calibration.py**: New module with 7-step automated calibration sequence
- **button.py**: One-click calibration from device page
- **const.py**: Enhanced with device identification, shade type mappings

### ZHA Quirk (Submission-Ready)
- Clean, minimal quirk extending WindowCovering cluster
- Manufacturer attributes (0x1000, 0x1001, 0x1002) with auto-injection
- Dual V1/V2 registration (QuirkBuilder + CustomDevice)
- Comprehensive documentation for upstream submission

### User Experience
- Single visible cover entity (ZHA entity hidden automatically)
- Feature filtering based on shade type (position-only vs position+tilt)
- Calibration button accessible from device page
- Shade type visible in entity attributes

## Configuration Updates
- services.yaml: Updated service name to calibrate_j1
- strings.json: New config flow messages and descriptions
- translations/en.json: Updated UI text
- manifest.json: Version 1.1.0

## Removed
- python_scripts/ubisys_j1_calibrate.py (replaced by calibration.py module)

## Supported Shade Types
- Roller (position only)
- Cellular (position only)
- Vertical Blind (position only)
- Venetian Blind (position + tilt)
- Exterior Venetian Blind (position + tilt)

--- a/custom_components/ubisys/services.yaml
+++ b/custom_components/ubisys/services.yaml
@@ -1,10 +1,14 @@
-calibrate:
-  name: Calibrate Ubisys Device
-  description: Run the calibration sequence for a Ubisys window covering controller.
+calibrate_j1:
+  name: Calibrate Ubisys J1
+  description: >
+    Run the automated calibration sequence for a Ubisys J1 window covering controller.
+    This will move the cover through its full range to measure total steps and configure
+    the device for the selected shade type (including tilt settings for venetian blinds).
+    The calibration process takes approximately 2 minutes to complete.
   fields:
     entity_id:
       name: Entity
-      description: The Ubisys cover entity to calibrate.
+      description: The Ubisys J1 cover entity to calibrate.
       required: true
       selector:
         entity:
