feat: add Ubisys D1 universal dimmer support
Add comprehensive support for Ubisys D1/D1-R universal dimmers with
manufacturer-specific features not exposed by standard ZHA integration.

## D1 Features Implemented

### ZHA Quirk (custom_zha_quirks/ubisys_d1.py)
- UbisysBallastConfiguration cluster (0x0301) with enhanced logging
- UbisysDeviceSetup cluster (0xFC00) for input configuration
- Both V1 (CustomDevice) and V2 (QuirkBuilder) registration
- Automatic manufacturer code injection (0x10F2)
- Extensive DEBUG logging for all cluster operations

### Configuration Services (d1_config.py)
1. configure_d1_phase_mode: Configure automatic/forward/reverse phase control
   - Safety warnings for incorrect configuration
   - Placeholder implementation (requires device testing for attribute ID)

2. configure_d1_ballast: Configure min/max brightness levels
   - FUNCTIONAL: Uses standard ZCL Ballast attributes (0x0011, 0x0012)
   - Prevents LED flickering via min_level configuration
   - Validation: 1-254 range, min < max

3. configure_d1_inputs: Configure physical switch inputs
   - Phase 3 feature (not yet implemented)
   - Requires DeviceSetup cluster testing with real device

### Light Platform (light.py)
- UbisysLight wrapper entity that delegates to ZHA
- State synchronization from ZHA light entity
- Brightness control with transition support
- Device-specific metadata (model, ZHA entity reference)

### Multi-Device Architecture

#### Shared Infrastructure (helpers.py) - NEW
- get_cluster(): Generic Zigbee cluster access for all devices
- get_entity_device_info(): Extract device info from entity
- validate_ubisys_entity(): Pre-flight validation
- find_zha_entity_for_device(): Find ZHA entity for delegation

#### Enhanced Constants (const.py)
- Device categorization: WINDOW_COVERING_MODELS, DIMMER_MODELS
- D1 constants: phase modes, ballast limits, endpoints, services
- Helper functions: get_device_type(), supports_calibration()
- Clear separation: J1-specific, D1-specifi

--- a/custom_components/ubisys/services.yaml
+++ b/custom_components/ubisys/services.yaml
@@ -1,3 +1,7 @@
+# =============================================================================
+# J1 WINDOW COVERING SERVICES
+# =============================================================================
+
 calibrate_j1:
   name: Calibrate Ubisys J1
   description: >
@@ -35,3 +39,182 @@ calibrate_j1:
         entity:
           domain: cover
           integration: ubisys
+
+# =============================================================================
+# D1 DIMMER CONFIGURATION SERVICES
+# =============================================================================
+
+configure_d1_phase_mode:
+  name: Configure D1 Phase Mode
+  description: >
+    Configure phase control mode for Ubisys D1 universal dimmer.
+
+
+    **⚠️ SAFETY WARNING:** Incorrect phase mode can damage your dimmer or connected bulbs.
+    Always start with "automatic" mode and only change if experiencing issues.
+
+
+    **Phase Modes:**
+
+    - **automatic** (default): Auto-detect load type (safest option)
+
+    - **forward**: Leading edge dimming for resistive/inductive loads
+
+    - **reverse**: Trailing edge dimming for capacitive loads (most LEDs)
+
+
+    **When to use each mode:**
+
+    - **automatic**: Use this by default. The D1 will automatically detect the load type.
+
+    - **forward**: Only if experiencing issues with resistive loads (incandescent bulbs, halogen).
+
+    - **reverse**: Only if experiencing LED flickering or buzzing with automatic mode.
+
+
+    **Symptoms that may require changing mode:**
+
+    - LED flickering at low brightness → Try "reverse" mode
+
+    - Buzzing or humming sound → Try "reverse" mode
+
+    - Dimmer getting excessively hot → Contact manufacturer
+
+
+    **Note:** Phase mode configuration is stored persistently in the device.
+  fields:
+    entity_id:
+      name: Light Entity
+      description: The Ubisys D1 light entity you want to configure.
+      required: true
+      selector:
+        entity:
+          domain: light
+          integration: ubisys
+    phase_mode:
+      name: Phase Mode
+      description: Phase control mode (automatic, forward, or reverse).
+      required: true
+      default: "automatic"
+      selector:
+        select:
+          options:
+            - "automatic"
+            - "forward"
+            - "reverse"
+
+configure_d1_ballast:
+  name: Configure D1 Ballast
+  description: >
+    Configure ballast minimum/maximum brightness levels for Ubisys D1 dimmer.
+
+
+    **What this does:**
+
+    - **Minimum level:** Prevents LED flickering at low brightness
+
+    - **Maximum level:** Limits maximum brightness (for energy savings or load protection)
+
+
+    **Typical values:**
+
+    - **Minimum:** 10-20 (prevents flickering, lower = smoother dimming)
+
+    - **Maximum:** 254 (no limit, lower values limit brightness)
+
+
+    **How to find the right minimum level:**
+
+    1. Set minimum to 1 and test dimming down
+
+    2. Note the brightness level where flickering starts
+
+    3. Set minimum to slightly above that level
+
+
+    **Examples:**
+
+    - Standard LED bulbs: min_level=15, max_level=254
+
+    - Sensitive LED bulbs: min_level=25, max_level=254
+
+    - Energy saving mode: min_level=10, max_level=200
+
+
+    **Valid range:** 1-254 for both min and max (min must be < max)
+
+
+    **Note:** Settings are stored persistently in the device.
+  fields:
+    entity_id:
+      name: Light Entity
+      description: The Ubisys D1 light entity you want to configure.
+      required: true
+      selector:
+        entity:
+          domain: light
+          integration: ubisys
+    min_level:
+      name: Minimum Level (optional)
+      description: Minimum brightness level (1-254). Leave empty to keep current setting.
+      required: false
+      selector:
+        number:
+          min: 1
+          max: 254
+          mode: box
+    max_level:
+      name: Maximum Level (optional)
+      description: Maximum brightness level (1-254). Leave empty to keep current setting.
+      required: false
+      selector:
+        number:
+          min: 1
+          max: 254
+          mode: box
+
+configure_d1_inputs:
+  name: Configure D1 Inputs
+  description: >
+    Configure physical switch inputs for Ubisys D1 dimmer.
+
+
+    **⚠️ ADVANCED FEATURE:** This service is not yet implemented.
+
+
+    **What this will do (when implemented):**
+
+    Configure how physical wall switches connected to the D1 interact with the dimmer:
+
+    - **Momentary:** Push button switches (press and release)
+
+    - **Toggle:** Traditional on/off switches
+
+    - **Decoupled:** Physical switch controls Zigbee bindings, not local output
+
+
+    **Most users don't need this:** The default input configuration works for standard switches.
+
+
+    **Implementation status:** Phase 3 (requires testing with real D1 device)
+  fields:
+    entity_id:
+      name: Light Entity
+      description: The Ubisys D1 light entity you want to configure.
+      required: true
+      selector:
+        entity:
+          domain: light
+          integration: ubisys
+    input_config:
+      name: Input Configuration
+      description: Input configuration string (Ubisys format).
+      required: true
+      selector:
+        text:
+    input_actions:
+      name: Input Actions (optional)
+      description: Input actions string (Ubisys format). Leave empty to keep current setting.
+      required: false
+      selector:
+        text:
