refactor: major codebase cleanup and architecture improvements (v1.2.0)
This release focuses on code quality, maintainability, and documentation.
Major refactoring to reduce duplication and improve code organization.

Breaking Changes:
- Removed deprecated s1_config.py module (use Config Flow UI instead)
- Renamed calibration.py → j1_calibration.py for consistency

Added:
- Comprehensive inline code comments explaining WHY, not just WHAT
- Shared helper functions (helpers.py) - extract_model_from_device(), extract_ieee_from_device()
- Shared ZHA quirk components (ubisys_common.py) - UbisysDeviceSetup cluster
- New documentation:
  - S1/S1-R configuration guide (docs/s1_configuration.md)
  - Migration guide v1.x → v1.2.0 (docs/migration_v2.0.md)
  - Input configuration technical details (docs/input_configuration.md)
  - Device trigger testing guide (docs/device_trigger_testing.md)
  - Input monitoring testing guide (docs/input_monitoring_testing.md)
  - D1 configuration guide (docs/d1_configuration.md)
- CHANGELOG.md tracking all changes
- Known Limitations section in README.md documenting all open items

Changed:
- Version: 1.1.1 → 1.2.0
- Refactored device_trigger.py to use shared helpers
- Refactored input_monitor.py to use shared helpers
- Refactored ubisys_d1.py and ubisys_s1.py to import from ubisys_common.py
- Enhanced module docstrings with architectural explanations
- Added detailed endpoint allocation documentation to const.py
- Updated CLAUDE.md to reflect multi-device architecture

Fixed:
- const.py forward reference bug (SERVICE_CALIBRATE used before SERVICE_CALIBRATE_J1 defined)
- D1 preset availability (both D1 and D1-R have 2 inputs)
- S1_ROCKER preset to use endpoint constants
- Clarified device support status in README (S1/S1-R marked as planned, not supported)

Architecture Improvements:
- DRY principle: Eliminated duplicate code across modules
- Separation of concerns: Device-specific logic in dedicated modules
- Shared-first approach: Common comp

--- a/custom_components/ubisys/services.yaml
+++ b/custom_components/ubisys/services.yaml
@@ -218,3 +218,12 @@ configure_d1_inputs:
       required: false
       selector:
         text:
+
+# =============================================================================
+# S1 SWITCH CONFIGURATION
+# =============================================================================
+# S1/S1-R input configuration is now done via Config Flow UI:
+# Settings → Devices & Services → Ubisys → Select Device → Configure
+#
+# This provides preset-based configuration with automatic rollback on failure.
+# The old configure_s1_input service has been removed in v2.1.0.
