chore(ci): add local CI runner, Makefile targets, and CI workflow\n\n- scripts/run_ci_local.sh to simulate CI locally\n- Makefile targets: ci, fmt, lint, typecheck, test\n- GitHub Actions workflow for lint/type/tests, hassfest, HACS

--- a/custom_components/ubisys/manifest.json
+++ b/custom_components/ubisys/manifest.json
@@ -6,7 +6,7 @@
   "dependencies": ["zha"],
   "documentation": "https://github.com/jihlenburg/homeassistant-ubisys",
   "integration_type": "device",
-  "iot_class": "local_polling",
+  "iot_class": "local_push",
   "issue_tracker": "https://github.com/jihlenburg/homeassistant-ubisys/issues",
   "requirements": [],
   "version": "1.2.0"
