--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install \
-            "homeassistant==2024.1.*" \
+            homeassistant==2024.1.6 \
             pytest pytest-asyncio pytest-cov \
             pytest-homeassistant-custom-component
       - name: Run tests
