chore(ci): migrate to PEP 735 dependency-groups and enhance test infrastructure
Migrate test dependencies from requirements-test.txt to pyproject.toml [dependency-groups]
(PEP 735, finalized October 2024) for modern Python dependency management.

Changes:
- Add [dependency-groups] to pyproject.toml (test/lint/typecheck/dev groups)
- Update scripts/run_ci_local.sh to use uv --group flag
- Update .github/workflows/ci.yml to use dependency-groups
- Remove requirements-test.txt (consolidated into pyproject.toml)
- Enhance tests/conftest.py with comprehensive fixtures (360 lines)
- Create tests/README.md with fixture guide and best practices
- Fix test compatibility with HA 2024.1.6 API
- Update pytest.ini with pythonpath and asyncio_mode

Documentation:
- Update CLAUDE.md CI & Tests section
- Update AGENTS.md Build/Test and Testing sections
- Update tests/README.md with dependency-groups reference

Benefits:
- Modern Python standard with wide tool support
- Single source of truth for all dependencies
- Faster installation with uv (82 packages in <2s)
- Flexible group-based installation (test/lint/typecheck/dev)

Verified: All 6 tests passing, 23% coverage baseline, CI working locally and in GitHub Actions

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,21 @@
 [pytest]
-addopts = -q
+# Auto-detect async tests (no decorator needed)
+asyncio_mode = auto
+
+# Set Python path so tests can import custom_components
+pythonpath = .
+
+# Test discovery
+testpaths = tests
+
+# Default options
+addopts = -v --strict-markers --tb=short
+
+# Markers
 markers =
     asyncio: mark a test as async/await based
+
+# Filter warnings
 filterwarnings =
     ignore::pytest.PytestUnhandledCoroutineWarning
     ignore:Unknown pytest\.mark\.asyncio:pytest.PytestUnknownMarkWarning
