--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
           key: ${{ runner.os }}-mypy-${{ hashFiles('pyproject.toml') }}
           restore-keys: |
             ${{ runner.os }}-mypy-
-      - name: Install tooling
+      - name: Install lint and type check dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install black isort flake8 mypy
+          python -m pip install --upgrade pip uv
+          uv pip install --system --group lint --group typecheck
       - name: Black
         run: black --check .
       - name: Isort
@@ -61,14 +61,7 @@ jobs:
           python-version: '3.11'
       - name: Install test dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install \
-            homeassistant==2024.1.6 \
-            async-timeout \
-            pytest pytest-asyncio pytest-cov \
-            pytest-homeassistant-custom-component
-      - name: Run tests
-        env:
-          PYTEST_DISABLE_PLUGIN_AUTOLOAD: '1'
-          PYTHONPATH: .
-        run: pytest -q --assert=plain
+          python -m pip install --upgrade pip uv
+          uv pip install --system --group test
+      - name: Run tests with coverage
+        run: pytest --cov=custom_components/ubisys --cov-report=term-missing
