--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,46 @@
+# =============================================================================
+# DEPENDENCY GROUPS (PEP 735)
+# =============================================================================
+# Modern Python standard for development dependencies (finalized October 2024)
+# Install with: uv pip install --dependency-groups dev
+# See: https://peps.python.org/pep-0735/
+
+[dependency-groups]
+# Test dependencies - everything needed to run pytest
+test = [
+    "pytest>=7.2.0,<8.0",           # Python 3.11 compatible test framework
+    "pytest-asyncio>=0.21.0,<0.22", # Async test support
+    "pytest-cov>=3.0.0,<4.0",       # Coverage reporting
+    "homeassistant==2024.1.6",      # Target Home Assistant version
+    "async-timeout>=4.0.0",         # Timeout context manager for async ops
+]
+
+# Linting tools - code style and quality
+lint = [
+    "black",    # Code formatter
+    "isort",    # Import sorter
+    "flake8",   # Style checker
+]
+
+# Type checking tools
+typecheck = [
+    "mypy",     # Static type checker
+]
+
+# Development - all tools combined for convenience
+# Use: uv pip install --group dev (or just install test, lint, typecheck separately)
+# Note: PEP 735 include-group syntax not yet widely supported, using explicit list
+dev = [
+    {include-group = "test"},
+    {include-group = "lint"},
+    {include-group = "typecheck"},
+]
+
+
+# =============================================================================
+# TOOL CONFIGURATION
+# =============================================================================
+
 [tool.black]
 line-length = 88
 target-version = ["py311"]
