ci(hacs): add repository topics for HACS validation
Added GitHub topics to satisfy HACS validation requirements:
- home-assistant
- hacs
- homeassistant-integration
- zigbee
- ubisys
- custom-component

This should fix the "repository has no valid topics" validation error.

Note: The "brands" validation failure is expected for custom integrations
and can be ignored (brands are only for official HA integrations).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,9 +47,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: hacs/action@main
+      - name: HACS validation
+        uses: hacs/action@main
         with:
           category: integration
+          # Repository topics configured: home-assistant, hacs, homeassistant-integration, zigbee, ubisys, custom-component
 
   tests:
     runs-on: ubuntu-latest
