--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,11 +49,10 @@ jobs:
       - uses: actions/checkout@v4
       - name: HACS validation
         uses: hacs/action@main
-        continue-on-error: true  # Brands validation fails for custom integrations (expected)
         with:
           category: integration
           # Repository topics configured: home-assistant, hacs, homeassistant-integration, zigbee, ubisys, custom-component
-          # Note: Brands validation will fail (expected for custom integrations)
+          # Brand assets available at: https://github.com/home-assistant/brands/tree/main/custom_integrations/ubisys
 
   tests:
     runs-on: ubuntu-latest
