fix(v1.3.6.6): add missing logbook dependency to manifest
Critical Fix:
- Add 'logbook' to dependencies array in manifest.json
- Resolves hassfest CI validation error from v1.3.6.4

Root Cause:
- In v1.3.6.4, moved logbook registration from logbook.py to inline in __init__.py
- Started importing homeassistant.components.logbook but forgot to declare it
- Home Assistant's hassfest validator requires all component imports be declared

Changes:
- manifest.json: dependencies changed from ["zha"] to ["zha", "logbook"]

Impact:
- Fixes CI validation - hassfest checks now pass
- No functional changes - integration already worked correctly
- Satisfies Home Assistant integration quality requirements

--- a/custom_components/ubisys/manifest.json
+++ b/custom_components/ubisys/manifest.json
@@ -3,11 +3,11 @@
   "name": "Ubisys Zigbee Devices",
   "codeowners": ["@jihlenburg"],
   "config_flow": true,
-  "dependencies": ["zha"],
+  "dependencies": ["zha", "logbook"],
   "documentation": "https://github.com/jihlenburg/homeassistant-ubisys",
   "integration_type": "device",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/jihlenburg/homeassistant-ubisys/issues",
   "requirements": [],
-  "version": "1.3.6.5"
+  "version": "1.3.6.6"
 }
